feat(engine): 支持 ParameterTool + 配置文件驱动 DecisionEngineJob，并收口 Kafka 主链路参数